# peru-news

./: README.md  constants.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
datasets/: news.csv
models/: New.py
sites/: CanalN.py  ElComercio.py  ElPeruano.py  Page.py  Peru21.py  RPP.py  sites.py
sites/canal_n/: CanalN.py  constants.py
sites/el_comercio/: ElComercio.py  constants.py
sites/el_peruano/: ElPeruano.py
sites/latina/: Latina.py
sites/peru21/: Peru21.py
sites/peru_21/: Peru21.py  constants.py
sites/rpp/: RPP.py  constants.py
tests/sites/: test_page.py
utils/: date.py  scraper.py
