[tool.poetry]
name = "peru-news"
version = "0.1.0"
description = ""
authors = ["jbuendia1y <jbuendia1y@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
pandas = "^2.2.1"
feedparser = "^6.0.11"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
